Fixed resizing issue on small displays

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -37,6 +37,7 @@
 main {
     height: 100%;
     color: #333;
+    min-width: 85em;
 }
 
 
